--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-onion-site",
+  "name": "railway-app",
   "version": "1.0.0",
-  "main":"serverjs",
-    "scripts": {
+  "private": true,
+  "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
